# SRE-triage-agent

./: .env.example  .gitignore  AGENTS.md  README.md  langgraph.json  pyproject.toml  sre-agent.yaml
agent/: __init__.py  approval.py  audit.py  cli.py  config.py  db_adapter.py  docker_sandbox.py  fanout.py  ingestion.py  llm.py  log_sources.py  memory.py  orchestrator.py  rubric_config.py  sandbox_tools.py  security.py
agent/subagents/: __init__.py  apm_analyzer.py  db_inspector.py  deploy_diff.py  git_blame.py  log_analyzer.py  patch_writer.py  repo_profiler.py  repro_graph.py
breakomatic/: __init__.py  alerts.py  app.py  config.py  database.py  inject.py  models.py
breakomatic/bugs/: __init__.py  bad_migration.py  broken_env.py  leaked_connection.py  n_plus_one.py.orig  null_deref.py
dashboard/: app.py
evals/: __init__.py  generalization_harness.py  harness.py  run_regression_suite.py  test_adversarial_scenarios.py  test_breakomatic_app.py  test_breakomatic_bugs.py  test_cli.py  test_config.py  test_db_inspector.py  test_empirical_safety.py  test_generalization_evals.py  test_incident.json  test_ingestion.py  test_log_sources.py  test_per_repo_memory.py  test_regression.py  test_repo_profiler.py  test_safety_hardening.py
evals/generalization_repos/payment_api/: app.py  test_app.py  (+1 more)
evals/logs/: regression_suite_20260721_181748.json
examples/: sre-agent.sample.yaml
incidents/: sample_n_plus_one.json  sample_null_deref.json
scripts/: run_incident.py  seed_bug.py  verify_phase0.py  verify_phase1.py  verify_phase3.py  verify_phase4.py  webhook_receiver.py
(+6 files in other folders)
